# ama

test/: mix.exs
test/lib/: rdb.ex  test.ex
test/native/rustler_rocksdb/: Cargo.toml  stuff
test/native/rustler_rocksdb/src/: lib.rs  lib2.rs  main.rs
