[package]

name = "rustler_rocksdb"

version = "0.1.0"

edition = "2021"



[lib]

name = "rustler_rocksdb"

path = "src/lib.rs"

crate-type = ["cdylib"]



[dependencies]

rustler = "0.36.0"

rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", branch = "master" }

lazy_static = "1.4.0"
